Java如果使用named-module的话，就没法call Kotlin in Java了，因为kotlin在unnamed-module，但无法indicate read unnamed-module in kotlin directly